--- a/BlazorApp6/Components/Layout/NavMenu.razor
+++ b/BlazorApp6/Components/Layout/NavMenu.razor
@@ -25,5 +25,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tasks">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Tasks
+            </NavLink>
+        </div>
     </nav>
 </div>
